<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right" >

                <RadioButton
                    android:id="@+id/RB_candidate_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.0"
                    android:gravity="left" />

                <TextView
                    android:id="@+id/TV_candidate_1"
                    android:layout_width="100dp"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.11"
                    android:gravity="right"
                    android:text="@string/candidate_1_txt"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/TV_serial_1"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="right"
                    android:text="@string/serial_1_txt"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right" >

                <RadioButton
                    android:id="@+id/RB_candidate_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.0"
                    android:gravity="left" />

                <TextView
                    android:id="@+id/TV_candidate_2"
                    android:layout_width="100dp"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.11"
                    android:gravity="right"
                    android:text="@string/candidate_2_txt"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/TV_serial_2"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="right"
                    android:text="@string/serial_2_txt"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right" >

                <RadioButton
                    android:id="@+id/RB_candidate_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.0"
                    android:gravity="left" />

                <TextView
                    android:id="@+id/TV_candidate_3"
                    android:layout_width="100dp"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.11"
                    android:gravity="right"
                    android:text="@string/candidate_3_txt"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/TV_serial_3"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="right"
                    android:text="@string/serial_3_txt"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right" >

                <RadioButton
                    android:id="@+id/RB_candidate_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.0"
                    android:gravity="left" />

                <TextView
                    android:id="@+id/TV_candidate_4"
                    android:layout_width="100dp"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.11"
                    android:gravity="right"
                    android:text="@string/candidate_4_txt"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/TV_serial_4"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="right"
                    android:text="@string/serial_4_txt"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right" >

                <RadioButton
                    android:id="@+id/RB_candidate_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.0"
                    android:gravity="left" />

                <TextView
                    android:id="@+id/TV_candidate_5"
                    android:layout_width="100dp"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.11"
                    android:gravity="right"
                    android:text="@string/candidate_5_txt"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/TV_serial_5"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="right"
                    android:text="@string/serial_5_txt"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right" >

                <RadioButton
                    android:id="@+id/RB_candidate_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.0"
                    android:gravity="left" />

                <TextView
                    android:id="@+id/TV_candidate_6"
                    android:layout_width="100dp"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.11"
                    android:gravity="right"
                    android:text="@string/candidate_6_txt"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/TV_serial_6"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="right"
                    android:text="@string/serial_6_txt"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right" >

                <RadioButton
                    android:id="@+id/RB_candidate_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.0"
                    android:gravity="left" />

                <TextView
                    android:id="@+id/TV_candidate_7"
                    android:layout_width="100dp"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.11"
                    android:gravity="right"
                    android:text="@string/candidate_7_txt"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/TV_serial_7"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="right"
                    android:text="@string/serial_7_txt"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right" >

                <RadioButton
                    android:id="@+id/RB_candidate_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.0"
                    android:gravity="left" />

                <TextView
                    android:id="@+id/TV_candidate_8"
                    android:layout_width="100dp"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.11"
                    android:gravity="right"
                    android:text="@string/candidate_8_txt"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/TV_serial_8"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="right"
                    android:text="@string/serial_8_txt"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right" >

                <RadioButton
                    android:id="@+id/RB_candidate_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.0"
                    android:gravity="left" />

                <TextView
                    android:id="@+id/TV_candidate_9"
                    android:layout_width="100dp"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.11"
                    android:gravity="right"
                    android:text="@string/candidate_9_txt"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/TV_serial_9"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="right"
                    android:text="@string/serial_9_txt"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right" >

                <RadioButton
                    android:id="@+id/RB_candidate_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.0"
                    android:gravity="left" />

                <TextView
                    android:id="@+id/TV_candidate_10"
                    android:layout_width="100dp"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.11"
                    android:gravity="right"
                    android:text="@string/candidate_10_txt"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/TV_serial_10"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="right"
                    android:text="@string/serial_10_txt"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right" >

                <RadioButton
                    android:id="@+id/RB_candidate_11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.0"
                    android:gravity="left" />

                <TextView
                    android:id="@+id/TV_candidate_11"
                    android:layout_width="100dp"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.11"
                    android:gravity="right"
                    android:text="@string/candidate_11_txt"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/TV_serial_11"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="right"
                    android:text="@string/serial_11_txt"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right" >

                <RadioButton
                    android:id="@+id/RB_candidate_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.0"
                    android:gravity="left" />

                <TextView
                    android:id="@+id/TV_candidate_12"
                    android:layout_width="100dp"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.11"
                    android:gravity="right"
                    android:text="@string/candidate_12_txt"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/TV_serial_12"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="right"
                    android:text="@string/serial_12_txt"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right" >

                <RadioButton
                    android:id="@+id/RB_candidate_13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.0"
                    android:gravity="left" />

                <TextView
                    android:id="@+id/TV_candidate_13"
                    android:layout_width="100dp"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.11"
                    android:gravity="right"
                    android:text="@string/candidate_13_txt"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/TV_serial_13"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="right"
                    android:text="@string/serial_13_txt"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center" >

                <Button
                    android:id="@+id/Btn_Vote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"           
                    android:text="@string/btn_vote">
                    
                </Button>
                
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>